SaneCrafting has been updated for Slimefun 5.
## SaneCrafting 1.1.0

SaneCrafting has been updated for Slimefun 5.

### What's New
- Slimefun items from supported workbench recipes can now be crafted in a normal Crafting Table.
- Enhanced Crafting Table recipes are supported.
- Magic Workbench recipes are supported.
- ExtraTools recipes such as the Hammer should now work in a normal workbench.
- Converted Slimefun recipes can appear in the vanilla recipe book after they are unlocked/researched.
- The Slimefun Guide now explains that the server allows normal workbench crafting.
- The Slimefun Guide now also shows which Slimefun station the item normally requires, such as Magic Workbench or Enhanced Crafting Table.

### Notes
- The vanilla recipe book only supports Minecraft’s built-in tabs, so we cannot add a custom Slimefun-only tab without a client mod.
- Some recipe-book “craftable” indicators may not be perfect because Minecraft does not fully understand every Slimefun custom ingredient.

This update brings SaneCrafting up to Slimefun 5 and improves the player experience around Slimefun crafting.

Players can craft supported Slimefun Enhanced Crafting Table and Magic Workbench recipes directly in a normal vanilla Crafting Table. These recipes are also registered with the vanilla recipe book when available, while still respecting Slimefun research unlocks.

The Slimefun Guide tooltip has also been clarified. Instead of only showing a normal crafting table, it now explains that the server allows regular workbench crafting for convenience and shows the original Slimefun station that would normally be required.